# password-generator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  version.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: test.yml
src/: gui.py  main.py  password_generator.py
tests/: test_password_generator.py
