[project]
name = "password-generator"
version = "1.0.0"
description = "Simple password generator with GUI"
authors = [
    {name = "Alex Lemetti", email = "alexlemetti@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "customtkinter>=5.2.2,<6.0.0",
    "pyperclip>=1.9.0,<2.0.0"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
ruff = "^0.12.8"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
