[project]
name = "password-generator"
version = "1.0.0"
description = "Simple password generator with GUI"
authors = [
    {name = "Alex Lemetti", email = "alexlemetti@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "customtkinter>=5.2.2,<6.0.0",
    "pyperclip>=1.9.0,<2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1,<9.0.0",
    "ruff>=0.12.8,<0.14.0",
    "coverage[toml]>=7.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/main.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"